[change] - very simple way of presentin partial data from backend

--- a/angular-frontend/src/app/components/trip-list/trip-list.component.html
+++ b/angular-frontend/src/app/components/trip-list/trip-list.component.html
@@ -18,3 +18,7 @@
   </mat-card-actions>
 </mat-card>
 
+<div *ngFor="let trip of trips">
+  <p>You can go to {{trip.destination.city}} in {{trip.destination.country}} and stay at hotel {{trip.destination.hotelName}} </p>
+</div>
+
