--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
 <app-navigation></app-navigation>
-<app-trip-list></app-trip-list>
+<!--router-outlet component will be replaced by content which fully depends on current URL-->
+<router-outlet></router-outlet>
