--- a/angular-frontend/src/app/components/navigation/navigation.component.html
+++ b/angular-frontend/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-  <mat-button-toggle >Home</mat-button-toggle>
-  <mat-button-toggle >All trips</mat-button-toggle>
-  <mat-button-toggle >About us</mat-button-toggle>
+  <mat-button-toggle routerLink="/home" >Home</mat-button-toggle>
+  <mat-button-toggle routerLink="/all-trips" >All trips</mat-button-toggle>
+  <mat-button-toggle routerLink="/about-us">About us</mat-button-toggle>
 </mat-button-toggle-group>
 
